--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,3 +13,14 @@
   font-size: 1.5em;
 }
 
+.picDes {
+ height: 100px;
+  border: 4px solid black;
+  text-align: center;
+  font-size: xx-large;
+  font-family: cursive;
+  margin-left: 25%;
+  margin-right: 25%;
+  background-color: aquamarine;
+  line-height: 90px;
+}
