--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,6 +25,7 @@
   margin-right: 35%;
   background-color: aquamarine;
   line-height: 90px;
+  width: 300px;
 }
 body {
   background-image: url(https://media.istockphoto.com/vectors/trace-brown-doodle-paw-prints-seamless-pattern-background-vector-id1169439839?k=20&m=1169439839&s=612x612&w=0&h=kHR8uwONekfGBQG9eepRvO9CV2z6oImbPvenUkiwJSc=);
@@ -33,19 +34,45 @@ body {
 img {
   width: 350px;
 }
-input {
-  width: 80%;
+#descInput {
   text-align: center;
   height: 30px;
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: 800;
+  color: green;
+  background-color: white;
+}
+#urlInput {
+  text-align: center;
+  height: 30px;
+  font-size: 24px;
+  font-weight: 800;
+  color: green;
+  background-color: white;
 }
 
 .submitBtn {
-  width: 200px;
+  width: 150px;
+  height: 40px;
+  background-color: rgb(60, 231, 60);
+  border-radius: 10px;
 }
 
 .addH2 {
   font-size: 35px;
   font-family: monospace;
   color: rgb(4, 109, 4);
+}
+
+.css-19qjufr-MuiStack-root {
+  margin-left: 40%;
+  margin-right: 30%;
+}
+.custom-css-outlined-input {
+  width: 80%;
+  text-align: center;
+  font-size: 100px;
+}
+.liCont {
+  font-size: 20px;
 }
